--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,7 +10,7 @@ server.port=8080
 
 # Datos de conexion con la base de datos MySQL
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
-spring.datasource.url=jdbc:mysql://localhost:3306/cines_bd
+spring.datasource.url=jdbc:mysql://localhost:3306/cines
 spring.datasource.username=root
 spring.datasource.password=
 
